--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Epilogue&display=swap');
 
+
 body {
     font-family: 'Epilogue', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    margin: 0px;
+    padding: 0px;
 }
+
+:root {
+    --white: hsl(0, 0%, 98%);
+    --gray: hsl(0, 0%, 41%);
+    --black: hsl(0, 0%, 8%);
+}
+
+.navbar {
+    padding: 30px 30px;
+    font-size: 12px;
+    color: --white;
+}
+
+button{
+    font-size: 12px !important;
+}
+
+
+
