--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,19 @@ body {
 
 .navbar {
     padding: 30px 30px;
-    font-size: 12px;
+    font-size: 15px;
     color: --white;
 }
 
 button{
-    font-size: 12px !important;
+    font-size: 15px !important;
 }
 
+h1 {
+    font-weight: 800;
+    font-size: 5em;
+    color: var(--black);
+    line-height: 1;
+}
 
 
