--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,14 @@ body {
     color: --white;
 }
 
+.btn {
+    color: var(--gray);
+    font-weight: bolder;
+}
+
+.btn:hover {
+    color: var(--black);
+}
 
 
 h1 {
@@ -58,11 +66,122 @@ p{
     padding: 5px;
 }
 
-.btn {
-    color: var(--gray);
-    font-weight: bolder;
-}
 
-.btn:hover {
-    color: var(--black);
-}
+
+@media (max-width: 1399px) {
+    h1 {
+        font-weight: bolder;
+        font-size: 4em;
+        color: var(--black);
+        line-height: 0.8;
+    }
+    
+    .hero-text {
+        padding-bottom: 50px;
+    }
+    
+    p{
+       font-weight: bold;
+       font-size: 16px;
+    }
+    
+    .wrapper {
+        margin-top: 100px;
+    }
+    
+    .wrapper2 {
+        max-height: 800px;
+        max-width: 100%;
+    }
+    
+    .hero-image {
+        padding-left: 50px;
+        max-height: 100%;
+    }
+    
+    .attribution {
+        position:sticky;
+        bottom: 0;
+        background: var(--white);
+        padding: 5px;
+    }
+}   
+
+
+@media (max-width: 1199px) {
+    h1 {
+        font-weight: bolder;
+        font-size: 3em;
+        color: var(--black);
+        line-height: 0.8;
+    }
+    
+    .hero-text {
+        padding-bottom: 50px;
+    }
+    
+    p{
+       font-weight: bold;
+       font-size: 16px;
+    }
+    
+    .wrapper {
+        margin-top: 100px;
+    }
+    
+    .wrapper2 {
+        max-height: 800px;
+        max-width: 100%;
+    }
+    
+    .hero-image {
+        padding-left: 50px;
+        max-height: 100%;
+    }
+    
+    .attribution {
+        position:sticky;
+        bottom: 0;
+        background: var(--white);
+        padding: 5px;
+    }
+}   
+
+@media (max-width: 960px) {
+    h1 {
+        font-weight: bolder;
+        font-size: 3em;
+        color: var(--black);
+        line-height: 0.8;
+    }
+    
+    .hero-text {
+        padding-bottom: 50px;
+    }
+    
+    p{
+       font-weight: bold;
+       font-size: 16px;
+    }
+    
+    .wrapper {
+        margin-top: 100px;
+    }
+    
+    .wrapper2 {
+        max-height: 800px;
+        max-width: 100%;
+    }
+    
+    .hero-image {
+        padding-left: 50px;
+        max-height: 100%;
+    }
+    
+    .attribution {
+        position:sticky;
+        bottom: 0;
+        background: var(--white);
+        padding: 5px;
+    }
+}   
