--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,11 @@ p{
     }
 }   
 
-@media (max-width: 960px) {
+@media (max-width: 990px) {
+    .sample, .hero-row {
+        flex-direction: column;
+    }
+
     h1 {
         font-weight: bolder;
         font-size: 3em;
@@ -155,33 +159,28 @@ p{
         line-height: 0.8;
     }
     
-    .hero-text {
-        padding-bottom: 50px;
-    }
+    
     
     p{
        font-weight: bold;
        font-size: 16px;
     }
-    
-    .wrapper {
-        margin-top: 100px;
+
+    .hero-text {
+        padding-bottom: 50px;
     }
-    
-    .wrapper2 {
-        max-height: 800px;
-        max-width: 100%;
-    }
-    
+
     .hero-image {
         padding-left: 50px;
         max-height: 100%;
     }
     
-    .attribution {
-        position:sticky;
-        bottom: 0;
-        background: var(--white);
-        padding: 5px;
-    }
+    
 }   
+
+.attribution {
+    position:sticky;
+    bottom: 0;
+    background: var(--white);
+    padding: 5px;
+}
