--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ p{
 
 
 
-@media (max-width: 1399px) {
+@media (min-width: 1399px) {
     h1 {
         font-weight: bolder;
         font-size: 4em;
@@ -94,11 +94,16 @@ p{
         max-width: 100%;
     }
     
-    .hero-image {
+    .hero-image-desktop {
         padding-left: 50px;
-        max-height: 100%;
+        max-height: 100vh;
+        margin: auto;
     }
     
+    .hero-image-mobile {
+        display: none;
+    }
+
     .attribution {
         position:sticky;
         bottom: 0;
@@ -138,6 +143,10 @@ p{
         padding-left: 50px;
         max-height: 100%;
     }
+
+    .hero-image-mobile {
+        display: none;
+    }
     
     .attribution {
         position:sticky;
@@ -148,8 +157,18 @@ p{
 }   
 
 @media (max-width: 990px) {
-    .sample, .hero-row {
+    .mobile-row {
         flex-direction: column;
+        text-align: center;
+        margin: auto;
+    }
+
+    .mobile-order-1 {
+        order: 1;
+    }
+
+    .mobile-order-2 {
+        order: 2;
     }
 
     h1 {
@@ -158,8 +177,6 @@ p{
         color: var(--black);
         line-height: 0.8;
     }
-    
-    
     
     p{
        font-weight: bold;
@@ -170,10 +187,19 @@ p{
         padding-bottom: 50px;
     }
 
-    .hero-image {
+    .hero-image-desktop {
         padding-left: 50px;
-        max-height: 100%;
+        height: 100%;
+        padding: 50px;
+        display: none;
+        line-height: 2;
     }
+
+    .hero-image-mobile {
+        display: block;
+        padding: 50px;
+    }
+    
     
     
 }   
